Refactor payment APIs and image uploading
- service/payment/payment.go: add new method GetPaymentIntent
- service/uploader/upload.go: refactor image uploading to directly upload raw image into Directus.
Directus can automatically upload back to cloudinary. Update api/profile.go, service/worker/generate_qr.go, main.go
with new change in upload
- service/worker/payment_retry.go: add retryable task for payment database record updating to retry -> keep
data integrity. Update service/worker/processor.go with new handler for this task
- db/model.go: add the TicketSellingSchedules slice in Ticket struct
- api/event.go: fetch ticket selling schedule and filter for any ticket selling schedule that is published in GetEvent
- api/webhook.go: formerly notification.go. Add 2 new webhooks: PublishQRTickets (after payment success, Directus trigger -> call
this webhook) and RefundWebhook (for host cancels event -> auto refund buyer)
- api/server.go: update webhook API routes. Add asynqmon API for web dashboard monitoring background task
- api/payment.go: refactor entire payment APIs to use the retryable database update job. Fix some logic bugs, return a more meaningful
error messages
- docker-compose.yaml: update directus service to include cloudinary lib for auto image uploading
- Makefile, sonar-project-properties: add SonarQube setup for this project
- .gitignore: update gitignore to ignore the test output file
